--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "cropperjs": "^1.6.1",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "easyinvoice": "^3.0.34",
     "ejs": "^3.1.9",
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "file-type": "^18.7.0",
+    "fs": "^0.0.1-security",
     "js-image-zoom": "^0.7.0",
     "moment": "^2.30.1",
     "mongoose": "^8.0.0",
